# word2vec-pipelines

./: .gitignore  README.md  example.py  pyproject.toml
skword2vec/: streams.py
skword2vec/model/: __init__.py  doc2vec.py  static.py  word2vec.py
skword2vec/preprocessing/: __init__.py  dummy.py  spacy.py  utils.py
skword2vec/streams/: __init__.py  _stream.py  filtering.py  utils.py
skword2vec/wranglers/: __init__.py  flattener.py  padder.py  pooler.py
