[tool.black]
line-length=79

[tool.poetry]
name = "word2vec-pipelines"
version = "0.1.0"
description = "Tools for training clean and performant word2vec models at scale."
authors = ["Márton Kardos <power.up1163@gmail.com>", "Jan Kostkan <jan.kostkan@cas.au.dk>"]
license = "MIT"
readme = "README.md"
packages = [{include = "word2vec_pipelines"}]

[tool.poetry.dependencies]
python = "^3.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
